fix chip list left overflow

--- a/src/app/core/entity-components/entity-utils/entity-select/entity-select.component.scss
+++ b/src/app/core/entity-components/entity-utils/entity-select/entity-select.component.scss
@@ -3,6 +3,7 @@
 .main-list {
   // Mat chip list overflows a little bit without this hack
   width: 98%;
+  padding-left: 1px;
 }
 
 .chip {
